--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
 	"require": {
-    "sendgrid/sendgrid": "~5.0.9"
+    "sendgrid/sendgrid": "~5.0.9",
+		"mongodb/mongodb": "^1.7",
+		"vlucas/phpdotenv": "^5.1"
   }
 }
